# covert-channel

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.cpp
main/address/: CMakeLists.txt  ip_address.cpp  ip_address.h  socket_address.cpp  socket_address.h
main/channel/: CMakeLists.txt  channel.h  covert_channel_using_udp_header.cpp  covert_channel_using_udp_header.h
main/raw_udp_socket/: CMakeLists.txt  raw_ip_socket.cpp  raw_ip_socket.h  raw_udp_socket.cpp  raw_udp_socket.h
main/raw_udp_socket/header/: CMakeLists.txt  udp_header.cpp  udp_header.h  utils.h
main/raw_udp_socket/packet/: CMakeLists.txt  datagram.cpp
main/raw_udp_socket/protocol/: CMakeLists.txt  datagram.h  ip_header.cpp  ip_header.h  ip_packet.cpp  ip_packet.h  socket_address.cpp  socket_address.h  utils.cpp
main/raw_udp_socket/utils/: CMakeLists.txt  os_exception.h
main/regular_udp_socket/: CMakeLists.txt  udp_socket.cpp  udp_socket.h
main/udp_message/: CMakeLists.txt  udp_message.cpp  udp_message.h
main/utils/: payload.cpp  payload.h
test/: CMakeLists.txt  covert_channel_test.cpp  main.cpp  payload_test.cpp  socket_test.cpp  socket_test_case.cpp
